--- a/main.html
+++ b/main.html
@@ -8,6 +8,31 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>My Playlist</h1>
+	<section class="play">
+	<ul>
+		<li><a href="https://www.pagalworld.com.se/files/download/id/64630" target="_blank">Maan meri jaan 1</a></li>
+		<li><a href="https://www.pagalworld.com.se/files/download/id/64630" target="_blank">Maan meri jaan 2</a></li>
+		<li><a href="https://www.pagalworld.com.se/files/download/id/64630" target="_blank">Maan meri jaan 3</a></li>
+		<li><a href="https://www.pagalworld.com.se/files/download/id/64630" target="_blank">Maan meri jaan 4</a></li>
+		<li><a href="https://www.pagalworld.com.se/files/download/id/64630" target="_blank">Maan meri jaan 5</a></li>
+	</ul>
+	</section>
+	<section class="two">
+	<h2>Now Playing...</h2>
+	<div class="player_one">
+	<video controls>
+		<source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
+	</video>
+	</div>
+	<h2>MP3 songs</h2>
+	
+	<div class="player_two">
+		<audio controls>
+		<source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mp3">
+		</audio>
+	</div>
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
